svn merge -r 22031:22104 http://svn.civicrm.org/civicrm/branches/v2.2 includes CRM-4657, report work/fixes
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22105 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/print.css
+++ b/css/print.css
@@ -29,6 +29,10 @@ table.form-layout td, table.form-layout th {
     text-align       : right;
 }
 
+#crm-container .reports-header {
+    text-align       : left;
+}
+
 #crm-container .report-contents {
     border           : 1px groove #DDDDDD;
     padding          : 4px;
@@ -43,6 +47,7 @@ table.form-layout td, table.form-layout th {
 
 #crm-container table.report-layout td {
     border           : 1px groove #DDDDDD;
+    padding          : 4px;
 }
 
 #crm-container table.report-layout tr {
@@ -55,6 +60,7 @@ table.form-layout td, table.form-layout th {
 }
 
 #crm-container table.report-layout th {
+    padding          : 4px;
     background-color : #DCDCDC;
 }
 
@@ -62,8 +68,15 @@ table.form-layout td, table.form-layout th {
     background-color : #F5F5F5;	       
 }
 
+#crm-container table.report-layout th.statistics {
+    width            : 5%;
+    white-space      : nowrap;
+}
+
 #crm-container h1 {
     text-align       : left;
-    font-size        : 30pt; font-style: italic;
+    font-family      : sans-serif;
+    font-size        : 20pt;
+    font-style       : italic;
     margin           : 0;
 }
