--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1427,8 +1427,8 @@ div.grippie {
 #crm-container .report-layout {
    background-color : #F5F5F5; 
    border           : none;
-   margin           : 0em 0em 0em 0.1em;
-   width            : 100%;
+   margin           : 0em 0em 1em 0.1em;
+   //width            : 100%;
 }
 
 #crm-container .reports-header {
@@ -1476,16 +1476,24 @@ div.grippie {
    background-color : #DCDCDC;
    border           : 1px solid #DCDCDC;
    color            : #000000;
+   padding          : 4px;
 }
 
 #crm-container table.report-layout th.report-contents {
    background-color : #F5F5F5;	       
 }
+
+#crm-container table.report-layout th.statistics {
+    width            : 5%;
+    white-space      : nowrap;
+}
+
 /*override default pager for report*/
 .report-pager .crm-pager {
     background-color: #DCDCDC;
     border          : thin solid #999999;
     margin-left	    : 0.1em;
+    width           : 99%;
 }
 .report-pager .crm-pager-nav a {
     color           : #000000;
