Fix Subtotal spelling and improve layout - CiviReport.
git-svn-id: http://svn.civicrm.org/civicrm/branches/v2.2@22139 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1268,7 +1268,7 @@ commented since it is overwiting simple td
 .report-pager .crm-pager {
     background-color: #DCDCDC;
     border          : thin solid #999999;
-    margin-left	    : 0.1em;
+    margin	        : 1em 0 0 0.1em;
     width           : 99%;
 }
 .report-pager .crm-pager-nav a {
