CiviReport help and ui improvements.
git-svn-id: http://svn.civicrm.org/civicrm/branches/v2.2@22143 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -256,6 +256,9 @@ div.spacer, .spacer {
  vertical-align: middle;
 }
 
+#crm-container .dijitDropDownButton {
+    margin: 0em !important;
+}
 
 #crm-container .control-panel td {
   padding: 3px;
