# CRM-4604 # Fix for sticky header in report.
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22202 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1521,3 +1521,7 @@ div.grippie {
 .report-pager .crm-pager-nav a {
     color           : #000000;
 }
+#crm-container .report-layout .sticky-header {
+  background-color  : #DCDCDC;
+  border            : 1px solid #DCDCDC;
+}
