#CRM-3897 #fixes for single row value and some code cleanup
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22268 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1279,6 +1279,11 @@ div.crm-pager a {
   display         : block;
 }
 
+#crm-container .panel li:hover { 
+ background-color: #3399FF;
+ color: #FFFFFF;
+}
+
 /*Styles for Context menu */
 
 #crm-container .contextMenu {
