minor fixes / improvements to CRM-3897
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22323 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1266,7 +1266,7 @@ div.crm-pager a {
   border-bottom: 1px solid #CCCCCC;
 }
 
-.btn-slide {
+#crm-container .btn-slide {
   text-align      : left;
   text-decoration : none;
   border          : none;
