#minor fixes for joomla and code clean-up
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22648 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/packages/jquery/css/token-input-facebook.css
+++ b/packages/jquery/css/token-input-facebook.css
@@ -19,7 +19,7 @@ ul.token-input-list-facebook {
 }
 
 ul.token-input-list-facebook li input {
-    border: 0;
+    border: 0 !important;
     width: 100px;
     padding: 3px 8px;
     background-color: white;
