fixed for CRM-4147 fixed tasklist table and convert multiple line text into single line for ts()
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22680 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1245,6 +1245,11 @@ div.crm-pager a {
   font-weight: bold;
 }
 
+#crm-container table.selector td.tasklist {
+    border-right: 1px solid #DDDDDD;
+    width       : 20%;
+}
+
 #crm-container td.tasklist a:link  {
   color: #FF0105;
 }
