--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -80,7 +80,7 @@ div.spacer, .spacer {
   font-weight: bold;
 }
 
-#crm-container input {
+#crm-container input[type="text"] {
   border: 1px solid #494949;
   font-size:12px;
   font-size-adjust:none;
@@ -92,6 +92,10 @@ div.spacer, .spacer {
   vertical-align:middle;
 }
   
+#crm-container .form-submit {
+  margin: 1em 0.5em 0.25em 0;
+}
+
 #crm-container fieldset {
   margin: .5em 0em .5em 0em;
 }
@@ -230,7 +234,7 @@ div.spacer, .spacer {
 
 #crm-container .form-layout-compressed td, #crm-container .form-layout-compressed th {
   vertical-align: text-top;
-  padding: 5px;
+  padding: 2px 5px;
 }
 
 #crm-container .control-panel td {
