#CRM-4605 #fixes to show Location in Domain/Location(Manage Event)
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22716 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1675,5 +1675,10 @@ DIV.buttons #icons {
 }
 
 #crm-container .hiddenElement {
-    display : none;
+    display 		: none;
+}
+
+#crm-container .boxBlock {
+	background-color: #F7F7F7;
+	border			: 1px solid #CCCCCC;
 }
