removing margin on advanced select boxes
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22744 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -896,12 +896,15 @@ div.crm-pager a {
 ** Boxes of checkbox elements (e.g. Advanced Search page)
 */
 #crm-container .listing-box {
-  margin: 0.25em 2.0em 0.5em 0em;
   width: auto;
   max-width: 30em;
   height: 7.25em;
   overflow: auto;
   border: 1px solid #92B6EC;
+}
+
+#crm-container .listing-box div {
+  color: black;
 }
 
 /*
