fixed for CRM-4773
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22779 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/xml/schema/Report/Instance.xml
+++ b/xml/schema/Report/Instance.xml
@@ -97,4 +97,19 @@
       <cols>60</cols>
       <add>2.2</add>     
   </field>
+  <field> 
+      <name>navigation_id</name> 
+      <title>Navigation ID</title>
+      <type>int unsigned</type> 
+      <import>true</import>
+      <comment>FK to navigation ID</comment> 
+      <add>3.0</add> 
+  </field> 
+  <foreignKey> 
+       <name>navigation_id</name> 
+       <table>civicrm_navigation</table>
+       <key>id</key> 
+       <add>3.0</add> 
+       <onDelete>SET NULL</onDelete>
+  </foreignKey> 
 </table>
