#CRM-4605 #table fixes for CustomData and added rounded border class for fieldset
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22872 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1673,7 +1673,8 @@ DIV.buttons #icons {
     display 		: none;
 }
 
-#crm-container .boxBlock {
-	background-color: #F7F7F7;
-	border			: 1px solid #CCCCCC;
+#crm-container .boxBlock, #crm-container fieldset{
+	background-color   : #F7F7F7;
+	border			   : 1px solid #CCCCCC;
+	-moz-border-radius : 4px 4px 4px 4px;	
 }
