--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -95,13 +95,25 @@ div.spacer, .spacer {
   margin: 1em 0.5em 0.25em 0;
 }
 
-#crm-container fieldset {
-  margin: .5em 0em .5em 0em;
+#crm-container fieldset{
+    background-image   : none;
+    margin             : .5em 0em .5em 0em;
 }
+
+#crm-container .boxBlock, #crm-container fieldset{
+	background-color   : #F7F7F7;
+	border			   : 1px solid #CCCCCC;
+	-moz-border-radius : 4px 4px 4px 4px;	
+}
+
 
 #crm-container fieldset.form-layout {
   margin: .25em 0em .5em 0em;
   padding: 1px 10px 1px 10px;
+}
+
+#crm-container fieldset.collapsible {
+  border: 0px;
 }
 
 #crm-container div.form-item {
@@ -227,7 +239,7 @@ div.spacer, .spacer {
 }
 
 #crm-container .form-layout td.report, #crm-container .form-layout td.description, #crm-container .form-layout-compressed td.description {
-  white-space: normal;
+  white-space   : normal;
 }
 
 #crm-container .form-layout-compressed td, #crm-container .form-layout-compressed th {
@@ -414,10 +426,12 @@ div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
 */
 /* Inline form field 'post-help' */
 #crm-container .description {
+  margin-bottom : 0.5em;
   padding: 0px 0px 5px;
   font-size: 0.9em;
   white-space: normal;
   width: auto;
+  color: #696969;
 }
 
 #crm-container .form-layout-compressed td.description {
@@ -433,11 +447,6 @@ div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
 #crm-container label {
   font-weight: normal;
   display: inline;
-}
-
-/* Normal weight labels for advanced search - too busy otherwise */
-#crm-container #Advanced label {
-  font-weight: normal;
 }
 
 #crm-container .notorg {
@@ -973,11 +982,6 @@ div.crm-pager a {
   background: #F5F5F5;
 }
 
-/* Suppress fading background image in search fieldsets. Looks bad with gray tables. */
-#crm-container div#searchForm fieldset {
- background-image: none;
-}
-
 #crm-container #main {
 	height: 95%;
 	width: 95%;
@@ -996,9 +1000,7 @@ div.crm-pager a {
 #crm-container .label-pane :hover {
 	cursor: pointer;
 }
-#crm-container fieldset.collapsible {
-  border: 0px;
-}
+
 #crm-container .content-pane {
   overflow: auto;
 }
@@ -1673,8 +1675,3 @@ DIV.buttons #icons {
     display 		: none;
 }
 
-#crm-container .boxBlock, #crm-container fieldset{
-	background-color   : #F7F7F7;
-	border			   : 1px solid #CCCCCC;
-	-moz-border-radius : 4px 4px 4px 4px;	
-}
