White background for auto-complete fields
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22921 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1375,8 +1375,13 @@ div.crm-pager a {
 
 /* loader autocomplete */
 
-body .ac_loading {background:url('../i/loading.gif') no-repeat right center;}
-.ac_input {background:url('../i/magnify.gif') no-repeat right center;}
+body .ac_loading {
+  background       : white url('../i/loading.gif') no-repeat right center;
+}
+
+.ac_input {
+  background       : white url(../i/magnify.gif) no-repeat scroll right center;
+}
 
 /*class for CMS user name check used in profile*/
 .cmsmessagebox {
