--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -62,7 +62,7 @@ div#crm-container {
 }
 
 #crm-container .geotag {
-    padding: 2px 0 2px 20px;
+    padding: 2px 0 2px 20px !important;
     background: url('../i/geotag_16.png') left center no-repeat;
     font-size: .9em;
 }
