fixed font-size in tabs, CRM-4606
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23002 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -737,6 +737,7 @@ div.crm-pager a {
   display: block;
   margin: 0px 0px 5px 5px;
   padding: 5px;
+  font-size: 0.95em;
 }
 #crm-container .section-hidden-border {
   border-bottom: 1px solid #B0B0B0;  
