worked on CRM-4815, layout changes for Contribution view
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23014 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1745,3 +1745,20 @@ div.grippie {
 #crm-container .clear {
     clear 		    : both;
 }
+
+#crm-container table.view-layout {
+  margin: 0em;
+  width: 98%;	
+  border-collapse: collapse;
+  border: 0px none;
+}
+
+#crm-container table.view-layout .label {
+	color          : DimGray; 
+	FONT-SIZE      : 0.95em; 
+	VERTICAL-ALIGN : top; 
+	FONT-WEIGHT    : bold; 
+	MARGIN-RIGHT   : 10px;
+	background-color:#EEEEEE;
+	width: 20%;
+}
